force-app/main/default/objects/Company_Settings__c/fields/Default_Currency__c.field-meta.xml
<CustomField>
    <fullName>Default_Currency__c</fullName>
    <defaultValue>&quot;USD&quot;</defaultValue>
    <description>The global default currency logic for CPQ Express Quotes.</description>
    <label>Default Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>