force-app/main/default/objects/Company_Settings__c/fields/Minimum_Margin__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Margin__c</fullName>
    <description>Minimum margin required for auto-approval</description>
    <label>Minimum Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>