force-app/main/default/objects/Company_Settings__c/fields/Signer_Title__c.field-meta.xml
<CustomField>
    <fullName>Signer_Title__c</fullName>
    <label>Signer Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>