force-app/main/default/objects/Company_Settings__c/fields/Work_Policy__c.field-meta.xml
<CustomField>
    <fullName>Work_Policy__c</fullName>
    <description>Configures how many days per week are considered working days.</description>
    <label>Work Policy</label>
    <type>Text</type>
    <length>50</length>
</CustomField>