force-app/main/default/objects/Company_Settings__c/fields/Working_Hours_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Working_Hours_Per_Day__c</fullName>
    <defaultValue>8</defaultValue>
    <description>Standard working hours per day used for hourly-to-period pricing conversion.</description>
    <label>Working Hours Per Day</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>